# fuchsia-pine64-pinephone

./: .gitignore
boards/: imx8m.gni  mt8167s_ref.gni  pinephone-1.2.gni  riscv64.gni  rpi4.gni
bundles/: BUILD.gn
examples/fidl/fuchsia.examples/: BUILD.gn
garnet/lib/perfmon/: controller.cc
scripts/: build-qemu.sh
sdk/banjo/ddk.protocol.clock/: clock.banjo
sdk/banjo/ddk.protocol.sdmmc/: sdmmc.banjo
sdk/fidl/fuchsia.hardware.clock/: clock.fidl
sdk/lib/fdio/: fdio.symbols.api
sdk/lib/fidl/cpp/: BUILD.gn  fidl_cpp.api
sdk/lib/sync/: sync.api
src/connectivity/network/netstack/: ndp.go
src/connectivity/overnet/: BUILD.gn
src/developer/debug/debug_agent/: BUILD.gn
src/devices/: BUILD.gn
src/devices/board/drivers/imx8m/: BUILD.gn  imx8m.bind  imx8m.cc  imx8m.h
src/devices/cpu/: BUILD.gn
src/devices/lib/amlogic/: aml-tdm-in-audio.cc
src/devices/lib/broadcom/: BUILD.gn
src/lib/vulkan/: BUILD.gn
src/media/audio/lib/: BUILD.gn
src/storage/blobfs/: blobfs.cc  blobfs.h
src/storage/fshost/: block-device-interface.h  block-device.cc  block-device.h  fshost-boot-args-test.cc  fshost-boot-args.cc
src/storage/lib/paver/: device-partitioner.h  paver.cc
src/testing/loadbench/: BUILD.gn  loadbench.cc  utility.cc  utility.h  worker.h  workload.cc  workload.h
src/testing/loadbench/data/: deadline_test.json  nanosleep.json  simple_load.json
src/ui/: BUILD.gn
src/virtualization/tests/: BUILD.gn
tools/bindc/src/: main.rs
tools/devshell/contrib/: debug-report
tools/vboot_reference/: BUILD.gn
zircon/: BUILD.zircon.gn
zircon/kernel/: BUILD.zircon.gn  gen-kaslr-fixups.sh  image.ld  kernel.ld  params.gni
zircon/kernel/arch/arm64/: BUILD.zircon.gn  dap.cc  exceptions.S  exceptions_c.cc  mp.cc  perf_mon.cc
zircon/kernel/arch/riscv64/: BUILD.zircon.gn  arch.cc  asm.S  boot-mmu.cc  debugger.cc  exceptions_c.cc  image.S  mmu.cc  mp.cc  perf_mon.cc  spinlock.cc  start.S  thread.cc  user_copy_c.cc
zircon/kernel/arch/riscv64/phys/: BUILD.zircon.gn  phys.gni  start.S
zircon/kernel/dev/psci/: psci.cc
zircon/kernel/hypervisor/: hypervisor_unittest.cc
zircon/kernel/include/kernel/: cpu_distance_map.h  cpu_search_set.h  percpu.h  percpu_trace.h  scheduler.h  spinlock.h
zircon/kernel/include/lib/: ktrace.h  relaxed_atomic.h
zircon/kernel/kernel/: BUILD.zircon.gn  cpu_search_set.cc  mutex.cc  percpu.cc  percpu_trace.cc  scheduler.cc
zircon/kernel/lib/crashlog/: crashlog.cc
zircon/kernel/lib/debuglog/: BUILD.gn
zircon/kernel/lib/libc/: cxa_atexit.cc
zircon/kernel/lib/libc/string/arch/riscv64/: BUILD.zircon.gn
zircon/kernel/lib/mtrace/: mtrace-pmu.cc
zircon/kernel/object/: glue.cc  process_dispatcher.cc  vm_address_region_dispatcher.cc
zircon/kernel/scripts/: zircon.elf-gdb.py
zircon/kernel/syscalls/: object.cc  task.cc
zircon/kernel/tests/: BUILD.zircon.gn  cpu_search_tests.cc
zircon/kernel/top/: main.cc
zircon/kernel/vm/: vm.cc  vm_address_region.cc  vm_address_region_or_mapping.cc  vm_aspace.cc  vm_object_paged.cc  vm_page_list.cc  vmm.cc
zircon/public/sysroot/: BUILD.gn
zircon/scripts/: package-image.sh  run-zircon
zircon/tools/zbi/: zbi.cc
(+216 files in other folders)
