# Copyright 2020 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

source_set("phys") {
  sources = [ "start.S" ]
  include_dirs = [ "$zx/.." ]
  deps = [ "$zx/kernel/lib/arch" ]
}

