# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

source_set("riscv64") {
  sources = [
    "$zx/kernel/lib/libc/string/memcpy.c",
    "$zx/kernel/lib/libc/string/memset.c",
  ]
  deps = [ "$zx/kernel/lib/libc:headers" ]
}
